add names and affliations after accept

--- a/_layouts/project_page.html
+++ b/_layouts/project_page.html
@@ -63,6 +63,14 @@
           </div>
           {% endif %}
 
+          {% if page.venue %}
+          <div class="is-size-5 publication-venue">
+            <h4 class="author-block">
+              {{ page.venue }}
+            </h4>
+          </div>
+          {% endif %}
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
