--- a/_layouts/project_page.html
+++ b/_layouts/project_page.html
@@ -117,18 +117,7 @@
                   <span class="icon">
                       <i class="fas fa-database"></i>
                   </span>
-                  <span>Fractal</span>
-                </a>
-              </span>
-              {% endif %}
-              {% if page.data_bridge %}
-              <span class="link-block">
-                <a href="{{ page.data }}"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-database"></i>
-                  </span>
-                  <span>Bridge</span>
+                  <span>Data</span>
                 </a>
               </span>
               {% endif %}
